--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       <div class="text">
                 <p>
-                    By signing up, you agree to our <a href="https://help.instagram.com/196883487377501">Terms</a>, <a href="https://help.instagram.com/196883487377501">Data Policy</a> <p style="margin-left:40px;">and</p> <a href="https://help.instagram.com/196883487377501">Cookies Policy</a>.
+                    By signing up, you agree to our <a href="https://help.instagram.com/196883487377501">Terms</a>, <a href="https://help.instagram.com/196883487377501">Data Policy</a> 
                 </p>
             </div>
       </div>
